# RBI-Bank-staff-RAG

./: .gitignore  Bank_Staff_RAG_Submission.docx  MONGODB_SCHEMA.md  README.md  chat_sessions.db  llm.py  main.py  pyproject.toml  requirements.txt  test_chunking.py  test_integration.py  test_llm.py  test_retriever.py
.github/: copilot-instructions.md
app/: app.py
app/static/: script.js  style.css
app/templates/: index.html
ingestion/: build_index.py  chunker.py  embedder.py  loader.py
notebook/: document.ipynb  pdf_loader.ipynb
retrieval/: retriever.py
vector_store/8305ceee-12d6-4613-bd2c-bc74fc37a88c/: index_metadata.pickle
vector_store_gemini/: chroma.sqlite3
vector_store_ibm/: chroma.sqlite3
vector_store_ibm30b/: chroma.sqlite3
